--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,3 +31,11 @@
     transform: rotate(360deg);
   }
 }
+
+.nav-link,
+.navbar-brand {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
