font + transition for nav bar menu mobile view (there is no way this is the correct way to do this in React....) I dislike it

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,3 +39,20 @@
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
 }
+
+@media only screen and (max-width: 992px) {
+  .nav-link {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0%);
+    }
+  }
+}
