cookie lasts 14 days now, messed up before.... also user obj data shown on my account page now.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,6 +60,10 @@
   cursor: pointer;
 }
 
+/*later if i need a dropdown in navbar .dropdown-menu {
+  background-color: #343a40;
+}*/
+
 .notification-container {
   top: 55px;
 }
