--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -82,3 +82,51 @@
   font-weight: bold;
   margin-bottom: 0px;
 }
+.mapCol {
+  position: relative;
+  text-align: center;
+  color: white;
+  margin-bottom: 20px;
+}
+.imgContainer {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 2%;
+  border: 1px solid #333;
+}
+.imgContainer:hover > .thumbnail > .mapPic {
+  transform: scale(1.1);
+  filter: blur(0px);
+}
+.imgContainer:hover {
+  border-color: #fff;
+}
+.thumbnail {
+  padding: unset;
+  margin-bottom: 0;
+  border: none;
+  background: transparent;
+}
+a.thumbnail:hover {
+  border-color: #333;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.noLinkLook {
+  color: #fff;
+}
+.noLinkLook:hover {
+  color: #fff;
+  text-decoration: none;
+}
+.mapPic {
+  max-width: 100%;
+  filter: blur(0.8px);
+  transition-duration: 0.15s;
+}
