fixed alt tag on dynamic images and setting up the css for the media query for when in mobile.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -144,3 +144,8 @@ a.thumbnail:hover {
 .invisible {
   display: none;
 }
+#mapCol {
+  overflow: auto;
+  max-width: 100%;
+  max-height: calc(100vh - 102px);
+}
