--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -144,8 +144,14 @@ a.thumbnail:hover {
 .invisible {
   display: none;
 }
-#mapCol {
-  overflow: auto;
-  max-width: 100%;
-  max-height: calc(100vh - 102px);
+@media only screen and (max-width: 991px) {
+  #contentContainer {
+    overflow: auto;
+    max-width: 100%;
+    max-height: calc(100vh - 102px);
+  }
+}
+#imgBox {
+  display: block;
+  margin: 0 auto;
 }
