--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -148,7 +148,7 @@ a.thumbnail:hover {
   #contentContainer {
     overflow: auto;
     max-width: 100%;
-    max-height: calc(100vh - 102px);
+    max-height: calc(100vh - 140px);
   }
 }
 #imgBox {
@@ -166,7 +166,18 @@ a.thumbnail:hover {
     left: 15px;
   }
 }
-.svgClass > g {
+@media only screen and (min-width: 1200px) {
+  .mapTitle,
+  #filterRow {
+    margin-left: 43px;
+    margin-right: 43px;
+  }
+  #filterCol {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+.svgClass g {
   stroke: #fff;
   fill: #fff;
   stroke-width: 1.7;
@@ -176,4 +187,91 @@ a.thumbnail:hover {
 .smokes:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.filterLabel {
+  color: rgba(255, 255, 255, 0.5);
+}
+.filterLabel:hover {
+  color: #fff;
+  background-color: #000;
+}
+.filterBar {
+  background-color: #222;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.filterBar > input:checked + label {
+  color: #fff;
+  background-color: #000;
+}
+.filterBar > input {
+  display: none;
+}
+#switch {
+  float: right;
+  top: 0.1em;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-bottom: 0px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #222;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #9d9d9d;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+input:checked + .slider {
+  background-color: #222;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+#T {
+  float: right;
+  position: relative;
+  top: 22%;
+  right: 10%;
+  color: #9d9d9d;
+  font-weight: 400;
+  font-size: 16px;
+}
+#CT {
+  float: left;
+  position: relative;
+  top: 22%;
+  left: 10%;
+  color: #9d9d9d;
+  font-weight: 400;
+  font-size: 16px;
 }
