--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,7 +106,6 @@ h2 {
 }
 .imgContainer:hover > .thumbnail > .mapPic {
   transform: scale(1.1);
-  filter: blur(0px);
 }
 .imgContainer:hover {
   border-color: #fff;
@@ -135,7 +134,6 @@ a.thumbnail:hover {
 }
 .mapPic {
   max-width: 100%;
-  filter: blur(1.2px);
   transition-duration: 0.15s;
 }
 .middle {
@@ -183,12 +181,10 @@ a.thumbnail:hover {
   stroke-width: 1.7;
   opacity: 0.4;
 }
-
-.smokes:hover {
+.svgClass g:hover {
   opacity: 1;
   cursor: pointer;
 }
-
 .filterLabel {
   color: rgba(255, 255, 255, 0.5);
 }
@@ -210,7 +206,7 @@ a.thumbnail:hover {
 }
 #switch {
   float: right;
-  top: 0.1em;
+  top: 0.3em;
 }
 .switch {
   position: relative;
