--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -239,6 +239,10 @@ g image {
   background-color: #222;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
 }
 
 .slider:before {
