user nade submission - next is for submitting to backend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -192,9 +192,12 @@ a.thumbnail:hover {
   stroke-width: 1.7;
   opacity: 0.4;
 }
-.svgClass g:hover {
+.loadedNades:hover {
   opacity: 1;
   cursor: pointer;
+}
+.userNadeNormal {
+  opacity: 1 !important;
 }
 g image {
   width: 0.55em;
