starting map view/list view - conditionally rendering icon and view.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -335,3 +335,8 @@ input:checked + .slider:before {
 .h1 {
   text-shadow: 2px 2px 5px #000;
 }
+.map,
+.list {
+  float: right;
+  cursor: pointer;
+}
