css changes on list items

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -356,8 +356,11 @@ input:checked + .slider:before {
 .nadeItem {
   padding-bottom: 10px;
   padding-top: 10px;
-  background-color: #000;
+  background-color: #222;
   margin-bottom: 15px;
+}
+.nadeItem a {
+  text-decoration: none;
 }
 .list-group .nadeItem:last-of-type {
   margin-bottom: 0px;
