adding bigger space between date and title

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -369,3 +369,6 @@ input:checked + .slider:before {
 .listContainer::-webkit-scrollbar {
   display: none;
 }
+.nadeTime {
+  padding-left: 20px;
+}
