--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -116,6 +116,10 @@ h2 {
   z-index: 1;
   border-radius: 2%;
   border: 1px solid #333;
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
 }
 .imgContainer:hover > .thumbnail > .mapPic {
   transform: scale(1.1);
