--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,6 +76,9 @@ h2 {
       transform: translateX(0%);
     }
   }
+  .nav-link {
+    animation: 0.5s ease 0.4s 1 normal forwards running navLinkFade;
+  }
 }
 .logout {
   cursor: pointer;
@@ -331,14 +334,6 @@ input:checked + .slider:before {
   font-weight: 400;
   font-size: 16px;
 }
-.welcomeText {
-  text-align: center;
-  padding-top: 2em;
-}
-.subText {
-  padding-top: 1em;
-  text-align: center;
-}
 .h1 {
   text-shadow: 2px 2px 5px #000;
 }
@@ -389,6 +384,9 @@ input:checked + .slider:before {
 .thumbs-up-icon-span {
   padding-right: 10px;
 }
+.thumbs-down-icon-span {
+  float: right;
+}
 .numLikes,
 .numDislikes {
   padding-right: 5px;
@@ -417,7 +415,7 @@ input:checked + .slider:before {
   visibility: hidden !important;
 }
 .nadeTitleRow {
-  padding-top: 1em;
+  padding-top: 0.5em;
 }
 .forgotPassword {
   float: right;
@@ -426,4 +424,71 @@ input:checked + .slider:before {
 .forgotPassword:hover {
   color: rgba(255, 255, 255, 0.75);
   text-decoration: none;
+}
+.orient-right {
+  flex-direction: row-reverse;
+}
+.row2,
+.row3,
+.row4 {
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.75);
+}
+.rowContent {
+  padding: 5rem 5rem 3rem 5rem;
+}
+.rowImage {
+  text-align: center;
+}
+.rowImage .spotlightIcon {
+  font-size: 10em;
+  height: 100%;
+  vertical-align: middle !important;
+}
+.rowContentWithImage {
+  padding: 5rem 5rem 3rem 5rem;
+  text-align: center;
+}
+.createAndSupport .spotlightIcon {
+  font-size: 10em;
+  height: 100%;
+  vertical-align: middle !important;
+  padding-bottom: 20px;
+}
+.mb-1 {
+  width: 6em;
+}
+@media only screen and (max-width: 767px) {
+  .row2,
+  .row3,
+  .row4 {
+    box-shadow: none;
+  }
+  .rowContent,
+  .rowContentWithImage {
+    text-align: center;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .rowContent .btn,
+  .rowContentWithImage .btn {
+    width: 100%;
+  }
+  .row2,
+  .row3,
+  .rowContentWithImage {
+    padding-top: 3em;
+  }
+  .lastItem {
+    padding-bottom: 1em;
+  }
+  .thumbs-up,
+  .thumbs-down {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .mb-1 {
+    width: 8em;
+  }
 }
